--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <div class="card">
+        <div class="card-cima">
             <img src="https://uiverse.io/build/_assets/astronaut-WTFWARES.png" alt="Astronauta">
             <div class="heading">SELECIONE UMA DATA...</div>
             <div class="search-bar">
@@ -18,10 +18,7 @@
                 <button id="buscar" onclick="searchNASA()">Buscar</button>
             </div>
         </div>
-        <button id="buscar">Buscar</button>
-    </div>
-    </div>
-    <div id="resultados" class="results"></div>
+        <div id="resultados" class="result-card"></div>
     </div>
 
     <script src="js/main.js"></script>
